--- a/package.json
+++ b/package.json
@@ -11,56 +11,122 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "4.20.0",
-    "@ionic-native/splash-screen": "4.20.0",
-    "@ionic-native/status-bar": "4.20.0",
-    "@ionic/storage": "2.2.0",
-    "cordova": "^9.0.0",
+    "@angular/animations": "^5.2.10",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@ionic-native/app-availability": "^4.15.0",
+    "@ionic-native/core": "^4.17.0",
+    "@ionic-native/device": "^4.7.0",
+    "@ionic-native/http": "^4.20.0",
+    "@ionic-native/in-app-browser": "^4.7.0",
+    "@ionic-native/screen-orientation": "^4.7.0",
+    "@ionic-native/secure-storage": "^4.19.0",
+    "@ionic-native/splash-screen": "^4.7.0",
+    "@ionic-native/status-bar": "^4.8.0",
+    "@ionic/storage": "^2.1.3",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^2.0.1",
+    "@types/lodash": "4.14.108",
     "cordova-android": "8.1.0",
     "cordova-ios": "5.1.1",
-    "cordova-plugin-fcm-with-dependecy-updated": "^7.0.1",
-    "ionic": "^3.20.1",
-    "ionic-angular": "3.9.9",
-    "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.29"
+    "cordova-plugin-advanced-http": "2.1.1",
+    "cordova-plugin-androidx": "1.0.2",
+    "cordova-plugin-androidx-adapter": "1.1.0",
+    "cordova-plugin-app-launcher": "0.4.0",
+    "cordova-plugin-appavailability": "0.4.2",
+    "cordova-plugin-cache-clear": "1.3.8",
+    "cordova-plugin-device": "1.1.7",
+    "cordova-plugin-fcm-with-dependecy-updated": "7.0.1",
+    "cordova-plugin-file": "6.0.2",
+    "cordova-plugin-inappbrowser": "3.2.0",
+    "cordova-plugin-ionic-keyboard": "2.1.3",
+    "cordova-plugin-ionic-webview": "4.1.2",
+    "cordova-plugin-iroot": "0.8.1",
+    "cordova-plugin-privacyscreen": "0.4.0",
+    "cordova-plugin-screen-orientation": "3.0.1",
+    "cordova-plugin-secure-storage-echo": "5.0.0",
+    "cordova-plugin-splashscreen": "5.0.3",
+    "cordova-plugin-statusbar": "2.4.3",
+    "cordova-plugin-whitelist": "1.3.4",
+    "es6-promise-plugin": "4.2.2",
+    "highcharts": "^6.1.0",
+    "ionic-angular": "^3.9.2",
+    "ionic-native-http-connection-backend": "4.0.10",
+    "ionic2-super-tabs": "^4.3.1",
+    "ionicons": "^3.0.0",
+    "lodash": "4.17.10",
+    "moment": "^2.22.1",
+    "ng-http-loader": "^0.9.1",
+    "ngx-toastr": "8.4.0",
+    "optional-require": "^1.0.0",
+    "rxjs": "^5.5.12",
+    "sw-toolbox": "^3.6.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.4",
-    "@types/node": "^14.0.14",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.2.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "typescript": "3.9.5"
+    "@ionic/app-scripts": "3.2.3",
+    "@types/jest": "23.3.12",
+    "@types/node": "^9.6.7",
+    "angular2-template-loader": "^0.6.2",
+    "ionic-mocks": "^1.3.0",
+    "ionic-mocks-jest": "^1.3.3",
+    "jest": "^23.6.0",
+    "jest-junit": "^3.7.0",
+    "jest-preset-angular": "^6.0.2",
+    "ts-loader": "^3.5.0",
+    "ts-node": "^4.1.0",
+    "tslint-ionic-rules": "^0.0.11",
+    "typescript": "2.6.2"
   },
-  "description": "An Ionic project",
+  "description": "Project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-fcm-with-dependecy-updated": {},
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-privacyscreen": {},
+      "cordova-plugin-screen-orientation": {},
       "cordova-plugin-device": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-cache-clear": {},
+      "cordova-plugin-whitelist": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-appavailability": {},
+      "cordova-plugin-app-launcher": {},
+      "cordova-plugin-iroot": {
+        "ENABLE_BUSYBOX_CHECK": "false"
+      },
+      "cordova-plugin-fcm-with-dependecy-updated": {},
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      },
+      "cordova-plugin-secure-storage-echo": {}
     },
     "platforms": [
       "android",
       "ios"
     ]
-  }
+  },
+  "cordovaPlatforms": [
+    {
+      "platform": "android",
+      "version": "8.1.0",
+      "locator": "android@8.1.0"
+    },
+    {
+      "platform": "ios",
+      "version": "5.1.1",
+      "locator": "ios@5.1.1"
+    }
+  ]
 }
