--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
-    "cordova": "^9.0.0",
-    "cordova-android": "8.1.0",
-    "cordova-ios": "5.1.1",
-    "cordova-plugin-fcm-with-dependecy-updated": "^7.0.1",
+    "cordova": "^10.0.0",
+    "cordova-android": "9.0.0",
+    "cordova-ios": "6.1.1",
+    "cordova-plugin-androidx-adapter": "1.1.3",
+    "cordova-plugin-fcm-with-dependecy-updated": "7.6.1",
     "ionic": "^3.20.1",
-    "ionic-angular": "3.9.9",
+    "ionic-angular": "3.9.10",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
@@ -37,30 +38,38 @@
   "devDependencies": {
     "@ionic/app-scripts": "3.2.4",
     "@types/node": "^14.0.14",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "typescript": "3.9.5"
+    "cordova-plugin-splashscreen": "^6.0.0",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "typescript": "4.1.2"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-fcm-with-dependecy-updated": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-fcm-with-dependecy-updated": {
+        "ANDROID_DEFAULT_NOTIFICATION_ICON": "@mipmap/ic_launcher",
+        "ANDROID_FCM_VERSION": "21.0.0",
+        "ANDROID_FIREBASE_BOM_VERSION": "26.0.0",
+        "ANDROID_GOOGLE_SERVICES_VERSION": "4.3.4",
+        "ANDROID_GRADLE_TOOLS_VERSION": "4.1.0",
+        "IOS_FIREBASE_MESSAGING_VERSION": "~> 7.0.0"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
